--- a/src/common/Footer.css
+++ b/src/common/Footer.css
@@ -1,3 +1,9 @@
 .footer-panel {
-  margin: 4%;
+  padding: 4%;
+  background: #e62b1e;
+  color: rgb(14, 14, 14);
+}
+
+.dark-a {
+  color: inherit;
 }
