Updated team page

--- a/src/team/Team.css
+++ b/src/team/Team.css
@@ -14,9 +14,9 @@
 
 .year-selector {
   display: flex;
-  justify-content: center;
   position: relative;
   z-index: 1;
+  justify-content: center;
 }
 
 .year {
@@ -31,7 +31,7 @@
 
 .team-display.active {
   display: flex;
-  padding: 50px;
+  padding: 0px 100px 50px 100px;
   flex-direction: column;
 }
 
@@ -43,7 +43,7 @@
   display: flex;
   flex-direction: column;
   border-left: solid #e62b1e thin;
-  border-radius: 5px;
+  border-radius: 10px;
   margin: 50px;
   padding: 20px;
 }
