--- a/src/team/Team.css
+++ b/src/team/Team.css
@@ -5,11 +5,18 @@
 }
 
 .team-image-panel {
-  height: 400px;
+  height: 500px;
   display: flex;
+  margin: auto;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   background-image: url("../img/logo1.png");
   background-size: cover;
+}
+
+.team-image-panel > div {
+  text-align: center;
 }
 
 .year-selector {
@@ -46,10 +53,12 @@
   border-radius: 10px;
   margin: 50px;
   padding: 20px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.452);
 }
 
 .team-member-info.active > * {
   width: 100%;
+  line-height: 25px;
 }
 
 .team-display-pics {
@@ -77,7 +86,7 @@
   left: 0;
   z-index: 0;
   border-radius: 5px;
-  display: block;
+  display: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   opacity: 0.4;
 }
@@ -92,7 +101,7 @@
   left: 0;
   z-index: 0;
   border-radius: 5px;
-  display: block;
+  display: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-bottom: solid #e62b1e thin;
 }
