added speakers page

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -85,3 +85,16 @@ h1 {
     transform: scale(1.2);
   }
 }
+
+.standard-button {
+  border: none;
+  font-weight: bold;
+  font-size: 0.8em;
+  text-transform: uppercase;
+  padding: 5px 10px;
+  background-image: url("../img/painted-x.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: inherit;
+  box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.452);
+}
