--- a/src/team/Team.css
+++ b/src/team/Team.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   background-image: url("../img/logo1.png");
   background-size: cover;
+  background-color: rgb(30, 30, 30);
 }
 
 .team-image-panel > div {
@@ -70,10 +71,12 @@
   border-radius: 5px;
   position: relative;
   z-index: 1;
+  filter: brightness(75%);
 }
 
 .profile-pic.active {
   z-index: 1;
+  filter: brightness(100%);
 }
 
 .select-indicator {
