--- a/src/speakers/Speakers.css
+++ b/src/speakers/Speakers.css
@@ -51,3 +51,43 @@
   align-items: center;
   text-align: center;
 }
+
+#speakers-scroll-nav {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll-nav-year {
+  padding: 20px 50px;
+  background: #e62b1e;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+.scroll-nav-year.active {
+  transform: scale(1.3);
+}
+
+.speakers-display {
+  margin: 100px 200px;
+}
+
+.speakers-image-panel {
+  height: 500px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url("../img/logo1.png");
+  background-size: cover;
+  background-color: rgb(30, 30, 30);
+}
+
+.speakers-image-panel * {
+  text-align: center;
+}
