finished about page

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .logo {
   width: 200px;
   height: 60px;
-  background-image: url("./img/Black_TEDx_Logo_small.png");
   background-size: cover;
   position: fixed;
   top: 40px;
@@ -12,4 +11,10 @@
 .App {
   background-color: rgb(34, 34, 34);
   color: whitesmoke;
+}
+
+.logoLink {
+  height: 100%;
+  width: 100%;
+  z-index: 3;
 }
