--- a/src/events/Events.css
+++ b/src/events/Events.css
@@ -1,8 +1,8 @@
 .main-panel-events {
-  background-image: url("../img/2018event.jpg");
+  background-image: url("../img/XLogo.png");
   color: whitesmoke;
-  padding-top: 190px;
-  padding-bottom: 190px;
+  padding-top: 220px;
+  padding-bottom: 220px;
   background-size: cover;
 }
 
