--- a/src/faq/FAQ.css
+++ b/src/faq/FAQ.css
@@ -13,6 +13,10 @@
   margin: 10px;
 }
 
+.text-red {
+  color: #e62b1e;
+}
+
 .faq-selector-container {
   display: flex;
   flex-direction: column;
