--- a/src/common/profile/Profile.css
+++ b/src/common/profile/Profile.css
@@ -14,4 +14,6 @@
 .profile-img {
   height: 100%;
   width: 100%;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
