Almost final version

--- a/src/common/CustomButton.css
+++ b/src/common/CustomButton.css
@@ -1,8 +1,9 @@
 .custom-button {
   text-transform: uppercase;
-  font-weight: thin;
-  padding: 5px 10px;
+  padding: 10px 20px;
   border-radius: 3px;
+  font-size: 0.8em;
+  font-weight: bold;
 }
 
 .custom-button:focus {
