--- a/src/about/About.css
+++ b/src/about/About.css
@@ -9,19 +9,19 @@
 }
 
 .team-image-panel {
-  height: 500px;
+  height: 650px;
   display: flex;
   margin: auto;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   background-image: url("../img/pizzaro2.jpg");
   background-size: cover;
   background-color: rgb(30, 30, 30);
 }
 
 .team-image-panel > div {
-  text-align: center;
+  text-align: left;
 }
 
 .year-selector {
@@ -122,13 +122,34 @@
 }
 
 .team-content-panel {
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+
+#about-first-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 200px;
+  /* background-color: #8a8a8a; */
+}
+
+#about-first-panel > p {
+  font-size: 1.5em;
+  text-align: center;
+  margin: 10px;
 }
 
 /* lg --- Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
   .team-display-pics > * {
     flex: 1;
+  }
+
+  .half-width {
+    width: 50%;
+    margin: 50px;
   }
 }
 
@@ -137,4 +158,15 @@
   .team-display-pics > * {
     flex: 1;
   }
+
+  .half-width {
+    width: 50%;
+  }
+}
+
+.team-gallery {
+  display: flex;
+  max-width: 100%;
+  flex-wrap: wrap;
+  margin: 100px 20%;
 }
