--- a/src/apply/Apply.css
+++ b/src/apply/Apply.css
@@ -9,3 +9,17 @@
   font-size: 50px;
   margin-right: 20px;
 }
+
+.apply-page-form-button {
+  text-transform: uppercase;
+  padding: 10px 20px;
+  border-radius: 3px;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
+.left-border {
+  border-left: solid #e62b1e;
+  padding-left: 10px;
+  margin-left: 10px;
+}
