--- a/src/common/RightNav.css
+++ b/src/common/RightNav.css
@@ -12,12 +12,12 @@
 }
 
 a:hover {
-  color: #e62b1e;
+  color: rgba(245, 245, 245, 0.616);
   text-decoration: none;
 }
 
 a {
-  transition: all 0.5s ease;
+  transition: all 0.1s ease;
   text-decoration: none;
   color: rgba(245, 245, 245, 0.829);
 }
