--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -39,7 +39,6 @@ h1 {
 
 .home-content {
   background-color: rgb(34, 34, 34);
-  background-image: url("../img/logo2.png");
   background-size: cover;
 }
 
@@ -97,4 +96,19 @@ h1 {
   background-repeat: no-repeat;
   background-color: inherit;
   box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.452);
+}
+
+#about-home-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 200px;
+  /* background-color: #8a8a8a; */
+}
+
+#about-home-panel > p {
+  font-size: 1.5em;
+  text-align: center;
+  margin: 10px;
 }
