--- a/src/common/Footer.css
+++ b/src/common/Footer.css
@@ -71,10 +71,11 @@ form > input[type="submit"] {
   flex: 1;
 }
 
-input[type="text"] {
+input[type="email"] {
   background-color: inherit;
   border: none;
   border-bottom: 2px solid white;
+  flex: 3;
 }
 
 input:focus {
