--- a/src/speakers/SpeakerProfile.css
+++ b/src/speakers/SpeakerProfile.css
@@ -17,7 +17,7 @@
   padding: 100px 200px;
   box-shadow: 0 0 20px rgb(0, 0, 0.4);
 }
-#speaker-profile-desc > p {
+#speaker-profile-desc p {
   font-size: 1.5em;
   text-align: left;
   margin: 10px;
@@ -25,4 +25,9 @@
 
 .more-padding {
   padding-left: 15px;
+}
+
+.podcast-div {
+  margin: 20px 0px 0px 10px;
+  width: 75%;
 }
