--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   width: 200px;
   height: 60px;
   background-size: cover;
-  position: fixed;
+  position: absolute;
   top: 40px;
   left: 60px;
   z-index: 2; /* Stay on top */
