--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   height: 60px;
   background-size: cover;
   position: absolute;
-  top: 40px;
-  left: 60px;
+  top: 5%;
+  left: 5%;
   z-index: 2; /* Stay on top */
   cursor: pointer;
 }
@@ -18,4 +18,8 @@
   height: 100%;
   width: 100%;
   z-index: 3;
+}
+
+.pointer:hover {
+  cursor: pointer;
 }
