--- a/src/about/About.css
+++ b/src/about/About.css
@@ -131,7 +131,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 100px 200px;
+  padding: 100px 10%;
   /* background-color: #8a8a8a; */
 }
 
