--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,5 +1,5 @@
 .main-panel-home-background {
-  background-image: url("../img/main_bg.jpg");
+  background-image: url("../img/main_bg_sm.jpg");
   height: 100vh;
   width: 100%;
   background-size: cover;
@@ -142,6 +142,15 @@ h1 {
   .grid {
     padding: 100px 15% 0px 15%;
     width: 100%;
+  }
+  .main-panel-home-background {
+    background-image: url("../img/main_bg.jpg");
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    margin: auto;
   }
 }
 
