--- a/src/faq/FAQ.css
+++ b/src/faq/FAQ.css
@@ -1,5 +1,5 @@
 .faq {
-  padding: 150px 15%;
+  padding: 150px 5%;
   background-image: url("../img/logo1.png");
   background-size: cover;
   background-attachment: fixed;
@@ -56,4 +56,26 @@
   .large-screen-only {
     display: block;
   }
+}
+
+/* sm --- Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* md --- Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .faq {
+    padding: 150px 15%;
+    background-image: url("../img/logo1.png");
+    background-size: cover;
+    background-attachment: fixed;
+  }
+}
+
+/* lg --- Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
+
+/* xl --- Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
