--- a/src/apply/Apply.css
+++ b/src/apply/Apply.css
@@ -10,6 +10,10 @@
   margin-right: 20px;
 }
 
+.padding-top {
+  padding-top: 10px;
+}
+
 .apply-page-form-button {
   text-transform: uppercase;
   padding: 10px 20px;
