--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -2,7 +2,7 @@
   background-image: url("../img/cornellpic.jpg");
   height: 100vh;
   width: 100%;
-  background-size: cover;
+  background-size: cover; 
   background-position: center;
   display: flex;
   margin: auto;
@@ -122,6 +122,18 @@ h1 {
   background-repeat: no-repeat;
   background-color: inherit;
   box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.452);
+}
+
+.scroll { /* this is the class for the button to scroll down */ 
+  position: absolute;
+  margin: auto;
+  size: 200px; 
+  color: white;
+  bottom: 80vh; 
+  height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #about-home-panel {
