--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,5 +1,5 @@
 .main-panel-home-background {
-  background-image: url("/Users/michaeltyrrell/tedxcornell-react/src/img/cornellpic2.jpg");
+  background-image: url("../img/cornellpic2.jpg");
   height: 90vh;
   width: 100%;
   background-size: cover; 
@@ -94,23 +94,6 @@ h1 {
   background-color: inherit;
 }
 
-/* PULSE ANIMATIONS */
-.pulse {
-  -moz-animation: pulse 1s infinite;
-  -webkit-animation: pulse 1s infinite;
-  animation: pulse 1s infinite;
-}
-
-@keyframes pulse {
-  0%,
-  100% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.2);
-  }
-}
-
 .standard-button {
   border: none;
   font-weight: bold;
@@ -162,7 +145,6 @@ h1 {
     width: 100%;
   }
   .main-panel-home-background {
-    /* background-image: url("../img/main_bg.jpg"); */
     background-image: url("../img/cornellpic2.jpg");
     height: 100vh;
     width: 100%;
