--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -134,6 +134,20 @@ h1 {
   opacity: 0.5;
 }
 
+.videos-title{
+  display: flex;
+  justify-content: center;
+}
+.ribbon{
+  position: relative;
+  left: 10%;
+  width: 80%;
+  height: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: #e62b1e;
+}
+
 /* sm --- Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 }
