Updates after 3/1 meeting

--- a/src/common/videoDisplay/VideoDisplay.css
+++ b/src/common/videoDisplay/VideoDisplay.css
@@ -1,11 +1,14 @@
 .video-display{
-    padding: 20px;
+    margin: 40px;
+    transition: transform .2s;
+    cursor: pointer;
 }
 
 .video-description{
-    padding-top: 20px;
+    padding: 20px;
 }
 
-.video-thumbnail{
-    cursor: pointer;
+
+.video-display:hover{
+    transform: scale(1.05);
 }
