--- a/src/common/Footer.css
+++ b/src/common/Footer.css
@@ -1,9 +1,10 @@
 .footer-panel {
   padding: 7%;
-  background: #e62b1e;
+  background-color: var(--secondary);
+  color: var(--primary);
 }
 
-.dark-a {
+.footer-panel a {
   color: inherit;
 }
 
@@ -89,23 +90,6 @@ input:focus {
 .icons-container i {
   font-size: 1.5em;
   padding: 15px;
-}
-
-::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
-  color: white;
-}
-::-moz-placeholder {
-  /* Firefox 19+ */
-  color: white;
-}
-:-ms-input-placeholder {
-  /* IE 10+ */
-  color: white;
-}
-:-moz-placeholder {
-  /* Firefox 18- */
-  color: white;
 }
 
 .footer-content-container {
