--- a/src/common/gallery/TeamProfile.css
+++ b/src/common/gallery/TeamProfile.css
@@ -4,12 +4,13 @@
   padding-right: 0px;
   padding-left: 0px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  color: var(--primary);
 }
 
 .team-profile-desc {
   display: flex;
   flex-direction: column;
-  background-color: rgb(34, 34, 34);
+  background-color: var(--secondary);
 }
 
 .team-profile-name {
