--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,9 +1,10 @@
 .main-panel-home-background {
-  background-image: url("../img/Rocket-2.png");
+  background-image: url("../img/Salon1Small.png");
   height: 90vh;
   width: 100%;
-  background-size: cover;
-  background-position: center;
+  background-size: contain;
+  background-position: center top;
+  /* background-repeat: no-repeat; */
   display: flex;
   margin: auto;
 }
@@ -15,12 +16,11 @@
 
 .main-panel-home-content {
   margin: auto;
-  color: white;
   height: 100%;
   display: flex;
   flex-direction: column;
   /* justify-content: flex-end; */
-  align-items: center;
+  /* align-items: center; */
 }
 
 .main-panel-home-content > * {
@@ -32,6 +32,16 @@
 
 .first-panel {
   width: 100%;
+}
+
+.about-home-panel-title {
+  font-size: 2.2em;
+  margin-bottom: 20px;
+  font-weight: 250;
+}
+
+.about-home-panel-desc {
+  font-size: 1.5em;
 }
 
 .offset-for-bg {
@@ -53,7 +63,6 @@
 }
 
 .section-title-container {
-  color: whitesmoke;
   width: 100%;
   display: flex;
   margin: auto;
@@ -65,7 +74,6 @@ h1 {
 }
 
 .home-content {
-  background-color: rgb(34, 34, 34);
   background-size: cover;
 }
 
@@ -76,6 +84,7 @@ h1 {
 .grid {
   padding: 100px 10% 0px 10%;
   width: 100%;
+  background-image: url("../img/logo2.png");
 }
 
 .fa-angle-down {
@@ -83,10 +92,18 @@ h1 {
   bottom: 50px;
 }
 
+.bottom-aligned-button-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 2em;
+}
+
 .paper-div {
   padding: 10px 20px 20px 30px;
-  border-left: solid #e62b1e;
-  color: whitesmoke;
+  border-left: solid var(--ted-red) thin;
 }
 
 .row-spacer {
@@ -107,25 +124,23 @@ h1 {
   box-shadow: 3px 3px 50px rgba(0, 0, 0, 0.452);
 }
 
+.profile-panel-container {
+  margin: 0% 8% 8% 8%;
+}
+
 #about-home-panel {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  padding: 100px 10%;
-  text-align: center;
-  /* background-color: #8a8a8a; */
+  margin: 100px 10%;
+  padding: 40px 40px;
+  text-align: left;
+  background-color: var(--primary);
+  border-left: solid var(--ted-red) thin;
 }
 
-.about-home-panel-p {
+#about-home-panel p {
   font-size: 1.5em;
-  text-align: center;
-  margin: 10px;
-}
-
-#about-home-panel > p {
-  font-size: 1.5em;
-  text-align: center;
   margin: 10px;
 }
 
@@ -145,8 +160,7 @@ h1 {
     width: 100%;
   }
   .main-panel-home-background {
-    background-image: url("../img/Rocket-2.png");
-    height: 100vh;
+    background-image: url("../img/Salon1.png");
     width: 100%;
     background-size: cover;
     background-position: center;
