--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,10 +1,10 @@
 .main-panel-home-background {
-  background-image: url("../img/Salon1Small.png");
+  background-image: url("../img/s2websitedes.jpg");
   height: 90vh;
   width: 100%;
   background-size: contain;
   background-position: center top;
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
   display: flex;
   margin: auto;
 }
@@ -160,10 +160,10 @@ h1 {
     width: 100%;
   }
   .main-panel-home-background {
-    background-image: url("../img/Salon1.png");
+    background-image: url("../img/s2websitedes.jpg");
     width: 100%;
     background-size: cover;
-    background-position: center;
+    background-position: top;
     display: flex;
     margin: auto;
   }
