--- a/src/common/info/ProfilePanel.css
+++ b/src/common/info/ProfilePanel.css
@@ -36,7 +36,7 @@
 
 .profile-name {
   font-size: 2em;
-  padding: 10px 10px 0px 10px;
+  padding: 10px;
   text-transform: uppercase;
 }
 
@@ -44,6 +44,13 @@
   font-size: 1.3em;
   font-weight: lighter;
   padding: 0px 10px 30px 10px;
+}
+
+.profile-talk {
+  font-size: 1.4em;
+  font-weight: 600;
+  margin-bottom: 10px;
+  padding: 0px 10px;
 }
 
 @media (max-width: 768px) {
