--- a/src/common/info/ProfilePanel.css
+++ b/src/common/info/ProfilePanel.css
@@ -13,16 +13,17 @@
   flex: 3;
   padding-left: 2%;
   padding-right: 2%;
+  padding-bottom: 2%;
   background-color: white;
   justify-content: center;
 }
 
 .profile-more-info {
-  font-size: 1.5em;
+  font-size: 1.4em;
 }
 
 .profile-blurb {
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   padding-bottom: 20px;
 }
@@ -47,10 +48,20 @@
 }
 
 .profile-talk {
-  font-size: 1.4em;
+  font-size: 1.8em;
   font-weight: 600;
   margin-bottom: 10px;
+  margin-top: 1em;
   padding: 0px 10px;
+}
+
+.profile-link {
+  margin: auto;
+
+}
+
+.profile-link a {
+    color: white;
 }
 
 @media (max-width: 768px) {
