--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,9 @@
 .second-accent-left-border {
   border-left: solid var(--second-accent);
 }
+html, body {
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
