--- a/src/common/topnav/TopNav.css
+++ b/src/common/topnav/TopNav.css
@@ -1,30 +1,9 @@
-#topnav {
-  display: flex;
-  background-color: var(--secondary);
-  color: var(--light-text);
+#logo {
+  width: 25%;
 }
 
-#topnav a {
-  color: var(--light-text);
-}
-
-#topnav a:hover {
-  color: gray;
-}
-
-.navitem {
-  display: flex;
-  padding: 1.5em 2em 0.5em 2em;
-  text-transform: uppercase;
-  font-weight: 300;
-}
-
-.active {
-  border-bottom: solid var(--ted-red);
-}
-
-.nav-links-container {
-  display: flex;
-  flex: 1;
-  justify-content: center;
+@media (max-width: 479px) {
+    #logo {
+        width: 50%;
+    }
 }
